--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jsonclone",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "main": "lib/jsonclone.js",
   "description": "library to allow jsonification of objects with behavior preserved via a simple metadata system",
   "homepage": "https://github.com/svoeller99/jsonclone",
@@ -18,8 +18,7 @@
     "lib"
   ],
   "keywords": [
-    "jsonclone",
-    ""
+    "jsonclone"
   ],
   "devDependencies": {
     "grunt-contrib-jshint": "~0.10.0",
@@ -27,15 +26,10 @@
     "grunt-contrib-watch": "~0.6.1",
     "load-grunt-tasks": "~0.4.0",
     "time-grunt": "~0.3.1",
-    "jshint-stylish": "~0.2.0",
-    "browserify": "~4.1.3"
+    "jshint-stylish": "~0.2.0"
   },
   "scripts": {
-    "test": "grunt",
-    "browser": "browserify lib/jsonclone.js > browser.js"
-  },
-  "bin": {
-    "jsonclone": "cli.js"
+    "test": "grunt"
   },
   "preferGlobal": "true"
 }
