--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "jsonclone"
   ],
   "devDependencies": {
+    "chai": "^3.2.0",
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-nodeunit": "~0.4.0",
     "grunt-contrib-watch": "~0.6.1",
+    "grunt-mocha-test": "^0.12.7",
+    "jshint-stylish": "~0.2.0",
     "load-grunt-tasks": "~0.4.0",
-    "time-grunt": "~0.3.1",
-    "jshint-stylish": "~0.2.0"
+    "time-grunt": "~0.3.1"
   },
   "scripts": {
     "test": "grunt"
